# seqan

./: .gitignore
apps/lara2/: .gitignore  CMakeLists.txt  README.md
apps/lara2/demo/: 0-seq.bpseq  EBPSEQ_format.ebpseq  U5_short.fa  rnafold.dbn
apps/lara2/include/: alignment.h  alignment_edges.h  data_types.h  interaction_edges.h  lara_core.h  lara_io.h  lemon_graph.h  misc_options.h  option.h  score_structure_rna.h  score_structure_rna_h  store_seqs.h  struct_align.h  tcoffee_interface.h  top_data_struct.h  vienna_rna.h
apps/lara2/ribosum_matrices/: RIBOSUM100-25_N.txt  RIBOSUM100-25_dN.txt  RIBOSUM100-30_N.txt  RIBOSUM100-30_dN.txt  RIBOSUM100-35_N.txt  RIBOSUM100-35_dN.txt  RIBOSUM100-40_N.txt  RIBOSUM100-40_dN.txt  RIBOSUM100-45_N.txt  RIBOSUM100-45_dN.txt  RIBOSUM100-50_N.txt  RIBOSUM100-50_dN.txt  RIBOSUM100-55_N.txt  RIBOSUM100-55_dN.txt  RIBOSUM100-60_N.txt  RIBOSUM100-60_dN.txt  RIBOSUM100-65_N.txt  RIBOSUM100-65_dN.txt  RIBOSUM100-70_N.txt  RIBOSUM100-70_dN.txt  RIBOSUM100-75_N.txt  RIBOSUM100-75_dN.txt  RIBOSUM100-80_N.txt  RIBOSUM100-80_dN.txt  RIBOSUM100-85_N.txt  RIBOSUM100-85_dN.txt  RIBOSUM100-90_N.txt  RIBOSUM100-90_dN.txt  RIBOSUM100-95_N.txt  RIBOSUM100-95_dN.txt  RIBOSUM100_N.txt  RIBOSUM100_dN.txt  RIBOSUM45-30_N.txt  RIBOSUM45-30_dN.txt  RIBOSUM45-35_N.txt  RIBOSUM45-35_dN.txt  RIBOSUM45-40_N.txt  RIBOSUM45-40_dN.txt  RIBOSUM45-45_N.txt  RIBOSUM45-45_dN.txt  (+300 more)
apps/lara2/src/: laragu.cpp  lemon_graph.cpp
apps/lara2/test/: List_of_LARA2_test.ipynb  lara2_vs_lara.ipynb  lara2_vs_lara_test.ipynb  time_old_new_bb2.ipynb  time_old_new_bb2.py
apps/lara2/test/benchmarks/bralibase2/data-set2/structural/: aln1.fasta.ct  aln1.fasta.struct  aln10.fasta.ct  aln10.fasta.struct  aln100.fasta.ct  aln100.fasta.struct  aln101.fasta.ct  aln101.fasta.struct  aln102.fasta.ct  aln102.fasta.struct  aln103.fasta.ct  aln103.fasta.struct  aln104.fasta.ct  aln104.fasta.struct  aln105.fasta.ct  aln105.fasta.struct  aln106.fasta.ct  aln106.fasta.struct  aln107.fasta.ct  aln107.fasta.struct  aln108.fasta.ct  aln108.fasta.struct  aln109.fasta.ct  aln109.fasta.struct  aln11.fasta.ct  aln11.fasta.struct  aln110.fasta.ct  aln110.fasta.struct  aln111.fasta.ct  aln111.fasta.struct  aln112.fasta.ct  aln112.fasta.struct  aln113.fasta.ct  aln113.fasta.struct  aln114.fasta.ct  aln114.fasta.struct  aln115.fasta.ct  aln115.fasta.struct  aln116.fasta.ct  aln116.fasta.struct  (+194 more)
apps/lara2/test/benchmarks/bralibase2/score_data-set1/: bralibase2_fig2.R  bralibase2_fig3.R
apps/lara2/test/benchmarks/bralibase3/: index.html
apps/lara2/test/benchmarks/mMarz_pseudoknot/: all.telo.stk
apps/lara2/test/inputs/: input.fa  input_small.fa  rna.fasta  rna.tcoffee_lib_bj.lib
apps/lara2/test/lara-1.3.2/: AUTHORS  COPYRIGHT  HOWTO  PARAMETERS  RIBOSUM65.mat  RIBOSUM65_pos.mat  lara  lara.params
apps/lara2/test/lara-1.3.2/t_coffee/: t_coffee_5.05
apps/rna_cosmo/: .gitignore  CMakeLists.txt  README
apps/rna_cosmo/include/: data_types.h  option.h  rna_core.h  rna_cosmo_io.h  vienna_rna.h
apps/rna_cosmo/src/: rna_cosmo.cpp
apps/rna_cosmo/test/inputs/: 5seq_ipknot_RNAfold_RNAstruct.dbn  input_for_cosmo.dbn  multi_3dl.dbn  multi_3sl.dbn  multi_3sl_test3.dbn  multi_4sl_testseq.dbn  multi_testseq.dbn  multi_tools_structures.dbn  rna_ns.fasta
apps/rna_cosmo/test/inputs/rdat_files/: 5SRRNA_1M7_0008.rdat  ADD140_1M7_0011.rdat  TRP4P6_DMS_0008.rdat
apps/rna_cosmo/test/mMarz_pseudoknot/: RF00013_full.stk  fungi.mrp.stk  metazoa.p.stk  pk_cov_alpha.stk  pk_cov_beta.stk  pk_hcv_ires.stk
(+836 files in other folders)
